@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.70.29    del XX/04/2016
+==================================
+
+ryLabel: aggiunte le proprietà "align" e "color".
+
+==================================
 Rilascio 1.70.28    del 06/04/2016
 ==================================
 
